Last bottom link updated

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             on GitHub</a
           >
           and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://yinka09.github.io/WeatherApp-clone/" target="_blank"
+            >hosted on Github</a
+          >
         </p>
       </footer>
     </div>
