Update Netlify link

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             on GitHub</a
           >
           and
-          <a href="https://yinka09.github.io/WeatherApp-clone/" target="_blank"
-            >hosted on Github</a
+          <a href="https://my-weatherapp-clone.netlify.app/" target="_blank"
+            >hosted on Netlify</a
           >
         </p>
       </footer>
